[gd_scene load_steps=16 format=3 uid="uid://dasgvja33k476"]

[ext_resource type="Script" uid="uid://b8cupksdsvolc" path="res://scripts/lessons/lesson_1/lo_1/lo_1.gd" id="1_hdleh"]
[ext_resource type="Texture2D" uid="uid://ck7deho5uut2o" path="res://assets/images/background.jpg" id="2_2fny7"]
[ext_resource type="Texture2D" uid="uid://c6xw4n3qlynl5" path="res://assets/images/lesson_1/lo_1/tool_3.png" id="3_2fny7"]
[ext_resource type="Texture2D" uid="uid://v5jm7xqrxfls" path="res://assets/images/prof.png" id="3_4dojl"]
[ext_resource type="Texture2D" uid="uid://dyat1d7hwljlx" path="res://assets/ui/panel/body/titled.png" id="4_hwltj"]
[ext_resource type="Texture2D" uid="uid://cye7bm7hbrw04" path="res://assets/ui/button/rect_medium/rect.png" id="5_2fny7"]
[ext_resource type="FontFile" uid="uid://md3bneuh3f8p" path="res://assets/fonts/Rubik-Bold.ttf" id="5_gdfq6"]
[ext_resource type="Texture2D" uid="uid://dq38ve1u1074y" path="res://assets/ui/button/rect_medium/rect_hover.png" id="6_hwltj"]
[ext_resource type="FontFile" uid="uid://c5ncwdnfodc8e" path="res://assets/fonts/Rubik-Regular.ttf" id="6_uxdue"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gdfq6"]
texture = ExtResource("6_hwltj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxdue"]
texture = ExtResource("5_2fny7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4dojl"]
texture = ExtResource("5_2fny7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hqe8s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a0x7v"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_imsk6"]

[node name="LO1" type="Node2D"]
script = ExtResource("1_hdleh")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2fny7")
metadata/_edit_lock_ = true

[node name="ToolPreview" type="Sprite2D" parent="."]
visible = false
position = Vector2(138.5, -138.5)
scale = Vector2(1.554, 1.554)
texture = ExtResource("3_2fny7")

[node name="Prof" type="Sprite2D" parent="."]
scale = Vector2(1.375, 1.375)
texture = ExtResource("3_4dojl")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ChoicesBox" type="MarginContainer" parent="CanvasLayer/UI"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 150

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/ChoicesBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Yes" type="Button" parent="CanvasLayer/UI/ChoicesBox/VBoxContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_uxdue")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_gdfq6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uxdue")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dojl")
text = "Yes, I'm ready"

[node name="Review" type="Button" parent="CanvasLayer/UI/ChoicesBox/VBoxContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_uxdue")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_gdfq6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uxdue")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dojl")
text = "Let's review again"

[node name="No" type="Button" parent="CanvasLayer/UI/ChoicesBox/VBoxContainer"]
custom_minimum_size = Vector2(500, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_uxdue")
theme_override_font_sizes/font_size = 40
theme_override_styles/hover = SubResource("StyleBoxTexture_gdfq6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uxdue")
theme_override_styles/normal = SubResource("StyleBoxTexture_4dojl")
text = "Not yet"

[node name="DialogueBox" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -330.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Background" type="NinePatchRect" parent="CanvasLayer/UI/DialogueBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
texture = ExtResource("4_hwltj")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/DialogueBox"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/DialogueBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Name" type="Label" parent="CanvasLayer/UI/DialogueBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_gdfq6")
theme_override_font_sizes/font_size = 50
text = "Prof"

[node name="Dialogue" type="RichTextLabel" parent="CanvasLayer/UI/DialogueBox/MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "Iâ€™m [Teacher Name], your guide and mentor as you begin your journey into the world of computer hardware and electronics."
fit_content = true
autowrap_mode = 2

[node name="Next" type="Button" parent="CanvasLayer/UI/DialogueBox"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_hqe8s")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a0x7v")
theme_override_styles/normal = SubResource("StyleBoxTexture_imsk6")

[connection signal="pressed" from="CanvasLayer/UI/DialogueBox/Next" to="." method="_on_pressed"]
